# milkshake

./: README.md  pyproject.toml  requirements.txt
cfgs/: adversarial.yaml  binary_mnist.yaml  celeba.yaml  cifar100.yaml  cifar10_cnn.yaml  cifar10_resnet.yaml  cifar10_resnet_simple.yaml  cifar10_swin_transformer.yaml  cifar10_vit.yaml  civilcomments.yaml  distillation.yaml  fmow.yaml  mnist.yaml  multinli.yaml  svhn.yaml  waterbirds.yaml
exps/: adversarial.py  distillation.py
milkshake/: args.py  imports.py  logger.py  main.py  model.py  utils.py
milkshake/datamodules/: __init__.py  binary_mnist.py  celeba.py  cifar10.py  cifar100.py  civilcomments.py  datamodule.py  dataset.py  fmow.py  mnist.py  multinli.py  svhn.py  waterbirds.py
milkshake/models/: bert.py  cnn.py  convnextv2.py  ffn.py  logger.py  model.py  nin.py  resnet.py  swin.py  swin_transformer.py  vit.py
