[build-system]
requires = [
    "setuptools>=64.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "milkshake"
version = "1.0.0"
authors = [{name = "Tyler LaBonte", email = "tlabonte@gatech.edu"}]
description = "Quick and extendable experimentation with classification models"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "configargparse==1.5.3",
    "lightning-bolts==0.7.0",
    "lightning-lite==1.8.6",
    "matplotlib==3.5.2",
    "pandas==2.2.3",
    "pytorch-lightning==1.9.5",
    "numpy==1.26.4",
    "rich==13.5.2",
    "torchmetrics==0.11.4",
    "transformers==4.39.2",
    "wandb==0.19.5",
    "wilds==2.0.0",
    "wget==3.2",
    "rfm @ git+https://github.com/aradha/recursive_feature_machines.git@pip_install",
]

[tool.setuptools]
packages = ["milkshake"]
